--- a/package.json
+++ b/package.json
@@ -3,17 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "classnames": "^2.2.6",
+    "final-form": "^4.20.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-final-form": "^6.5.1",
+    "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
-    "typescript": "~3.7.2"
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "shortid": "^2.2.15"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^10.4.9",
+    "@testing-library/user-event": "^12.1.3",
+    "@types/classnames": "^2.2.10",
+    "@types/jest": "^26.0.10",
+    "@types/node": "^14.6.1",
+    "@types/react": "^16.9.48",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.9",
+    "@types/shortid": "^0.0.29",
+    "redux-saga-test-plan": "^4.0.0-rc.3",
+    "typescript": "~4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
